--- a/package.json
+++ b/package.json
@@ -8,22 +8,23 @@
     "watch": "tsc -w | vite build --watch",
     "build": "yarn clean && tsc && vite build",
     "build:debug": "node --inspect-brk=5858 ./node_modules/.bin/vite build",
-    "publish": "npm publish --access public",
+    "release:minor": "npm version minor && npm publish --access public",
+    "release:patch": "npm version patch && npm publish --access public",
     "lint": "eslint --fix \"src/**/*.{js,ts}\"",
     "test": "yarn vitest"
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "^18.7.16",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
-    "eslint": "^8.23.0",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
+    "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "rimraf": "^3.0.2",
-    "typescript": "^4.8.3",
-    "vite": "^3.1.0",
-    "vitest": "^0.23.1"
+    "typescript": "^4.8.4",
+    "vite": "^3.2.2",
+    "vitest": "^0.24.5"
   },
   "repository": {
     "type": "git",
